Better test format, bit of code cleanup, fix a few bugs